--- a/dockers/docker-config-engine-buster/Dockerfile.j2
+++ b/dockers/docker-config-engine-buster/Dockerfile.j2
@@ -4,6 +4,9 @@ FROM docker-base-buster-{{DOCKER_USERNAME}}:{{DOCKER_USERTAG}}
 ## Make apt-get non-interactive
 ENV DEBIAN_FRONTEND=noninteractive
 
+# Workaround for Google corp machine.
+RUN chmod 664 /etc/apt/trusted.gpg.d/public_key.gpg
+
 RUN apt-get update         && \
     apt-get install -y        \
         apt-utils             \
