[PINS] Build P4RT container for PINS
- Add INCLUDE_PINS to config to enable/disable container
- Add Docker files and supporting resources
- Add sonic-pins submodule and associated make files

Submission containing materials of a third party:
    Copyright Google LLC; Licensed under Apache 2.0

Co-authored-by: Runming Wu <runmingwu@google.com>
Co-authored-by: Robert J. Halstead <rhalstea@google.com>
Co-authored-by: Srikishen Pondicherry Shanmugam <kishanps@google.com>
Co-authored-by: Brian O'Connor <bocon@opennetworking.org>

Signed-off-by: Brian O'Connor <bocon@opennetworking.org>

--- a/sonic-slave-buster/Dockerfile.j2
+++ b/sonic-slave-buster/Dockerfile.j2
@@ -533,3 +533,8 @@ RUN apt-get install -y nodejs
 # Tell azure pipeline to use node.js in the docker
 LABEL "com.azure.dev.pipelines.agent.handler.node.path"="/usr/bin/node"
 {% endif -%}
+
+# Install Bazel build system (amd64 and arm64 architectures are supported using this method)
+ARG bazelisk_version=1.10.1
+ARG bazelisk_url=https://github.com/bazelbuild/bazelisk/releases/download/v${bazelisk_version}/bazelisk-linux-{{ CONFIGURED_ARCH }}
+RUN curl -fsSL ${bazelisk_url} > /usr/local/bin/bazel && chmod 755 /usr/local/bin/bazel
