[PINS] Add submit to ingress port to copp_cfg file
Submission containing materials of a third party:
    Copyright Google LLC; Licensed under Apache 2.0

Co-authored-by: Glenn Connery <gconnery@google.com>

Signed-off-by: Brian O'Connor <bocon@opennetworking.org>

--- a/files/image_config/copp/copp_cfg.j2
+++ b/files/image_config/copp/copp_cfg.j2
@@ -13,7 +13,7 @@
 		    "trap_priority":"4",
 		    "queue": "4"
 	    },
-	    "queue4_group2": {            
+	    "queue4_group2": {
 		    "trap_action":"copy",
 		    "trap_priority":"4",
 		    "queue": "4",
@@ -60,7 +60,10 @@
 		    "trap_action": "trap",
 		    "trap_priority": "1"
 
-	    }
+	    }{%- if include_p4rt == "y" %},
+	    "trap.group.send_to_ingress" : {
+		    "submit_to_ingress_name" : "send_to_ingress"
+	    }{% endif %}
     },
     "COPP_TRAP": {
 	    "bgp": {
